# codebase

c/: CMakeLists.txt  temp.c
cpp/: .gitignore  CMakeLists.txt  cpp.md  cpptrick.md  destruct_temp1.cpp  stdmove.cpp  templates.cpp
cpp/src/: cast.cpp  comiple_option.cpp  copy_elison.cpp  destruct_temp2.cpp  do_not_copy_resource.cpp  move_constructor.cpp  override.cpp  reference.cpp  rvo_nrvo.cpp  singleton.cpp  smart_pointer.cpp  static_member.cpp  static_template.cpp  templates.cpp  virtual_method.cpp
java/: java.md
python/scripts/: compose_img.py
rust/: Cargo.toml
rust/.github/workflows/: ci.yml
rust/asm_example/: map.rs  str.rs
rust/src/: layout.rs  lib.rs
rust/src/asm/: Cargo.toml
rust/src/asm/src/: lib.rs
rust/src/asynchronous/: Cargo.toml  mod.rs
rust/src/asynchronous/src/: main.rs
rust/src/borrow_ref/: mod.rs  problem1.rs
rust/src/concurrency/: Cargo.toml  mod.rs
rust/src/concurrency/src/: main.rs
rust/src/data_structure/: lru.rs  mod.rs
rust/src/extern_c/: Cargo.toml  extern_c.rs  mod.rs
rust/src/extern_c/src/: main.rs
rust/src/io/: Cargo.toml
rust/src/io/src/: main.rs
rust/src/iter/: Cargo.toml  mod.rs
rust/src/lifetime/: mod.rs
rust/src/pattern_matching/: Cargo.toml
rust/src/pattern_matching/src/: main.rs
rust/src/proc_macro/: Cargo.toml  mod.rs
rust/src/proc_macro/src/: main.rs  proc_tests.rs
rust/src/smart_pointer/: mod.rs  rc.rs  rc_refcell.rs
rust/src/string/: Cargo.toml
rust/src/string/src/: foo.rs  main.rs
rust/src/trait_demo/: Cargo.toml
rust/src/trait_demo/src/: main.rs  trait_demo.rs
rust/src/traits/: demo1.rs  demo2.rs  mod.rs
rust/src/unsafe_demo/: Cargo.toml  foo.cpp  foo.rs  mod.rs  raw_ptr.rs
rust/src/unsafe_demo/src/: main.rs
