[package]
name = "rust"
version = "0.1.0"
authors = ["ChiangYintso <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

io = { path = "src/io" }
pattern_matching = { path = "src/pattern_matching" }

[[bin]]
name = "extern_c"
path = "src/extern_c/extern_c.rs"